--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: "Welcome. This is LG Open Source Homepage."      # used by search e
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_feature_image: /assets/img/background/main_mod2.png
+header_feature_image: /assets/img/background/main_ospo.png
 
 footer_text: >
   Copyright (c) 2020 LG Electronics
@@ -20,7 +20,7 @@ color_image: /assets/img/lineart.png                    # A bit transparent for 
 
 # Features
 katex: true                                             # Enable if using math markup
-google_analytics: UA-174556775-1                                      # Tracking ID, e.g. "UA-000000-01"
+google_analytics:                                     # Tracking ID, e.g. "UA-000000-01"
 cookie_consent: false                                   # To respect the usage of cookies
 disqus_shortname:                                       # Your discus shortname for comments
 layout_variables:                                       # Open the "_sass > base" folder, and open "_variables.scss"
